--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vladmoskov.github.io/app/",
+  "homepage": "https://vladmoskov.github.io/social-network/",
   "name": "app",
   "version": "0.1.0",
   "private": true,
